--- a/public/assets/scss/modules/structure/_header.scss
+++ b/public/assets/scss/modules/structure/_header.scss
@@ -1,109 +1,81 @@
+/////////////////////////////////
+// name: Header
+////////////////////////////////
+
 header {
   background-color: $ligten;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1200px;
+  margin: 0 auto;
+  max-width: rem(1200);
   overflow: hidden;
+  padding: rem(15);
+}
 
-  @media screen and (min-width: $desktop) {
-    height: 80px;
+.header-brand {
+  display: block;
+  text-align: center;
+
+  @media screen and (min-width: $tablet) {
+    display: inline-block;
+    text-align: left;
+    vertical-align: middle;
   }
 }
 
-.main-nav {
-  padding: 22px 15px;
+.header-nav {
+  display: block;
   text-align: center;
 
-  @media screen and (min-width: $header-menu) {
-    float: left;
-    text-align: left;
+  @media screen and (min-width: $tablet) {
+    display: inline-block;
+    margin-left: rem(30);
+    vertical-align: middle;
+  }
+}
+
+.header-nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.header-nav li {
+  @extend %inline-middle-block;
+  margin-left: rem(30);
+
+  &:first-child {
+    margin-left: 0;
+  }
+}
+
+.header-support {
+  display: block;
+  margin-top: rem(15);
+
+  @media screen and (min-width: $tablet) {
+    display: none;
   }
 
   @media screen and (min-width: $notebook) {
-    padding: 22px 30px;
-  }
-
-  .brand {
-    display: block;
-
-    @media screen and (min-width: $notebook) {
-      margin-right: 0.9em;
-    }
-
-    img {
-      margin-left: auto;
-      margin-right: auto;
-      max-width: 250px;
-      width: 100%;
-    }
-
-    @media screen and (min-width: $header-menu) {
-      display: inline-block;
-      vertical-align: middle;
-    }
-  }
-
-  .main-nav__link {
-   @extend %inline-middle-block;
-    font-size: 15px;
-    font-weight: 600;
-    margin-left: 0.9em;
-    margin-right: 0.9em;
-    margin-top: 0.9em;
-
-    @media screen and (min-width: $header-menu) {
-      margin-top: 0;
-    }
-  }
-
-  .github-star {
-    font-size: 0;
-    display: none;
-
-    @media screen and (min-width: $notebook) {
-      display: inline-block;
-    }
+    display: inline-block;
+    margin-left: rem(30);
+    margin-top: 0;
+    vertical-align: middle;
   }
 }
 
-.advertiser-nav {
-  padding-bottom: 20px;
-  text-align: center;
+.header-github {
+  display: none;
+  position: fixed;
+  right: 0;
+  top: 0;
 
-  @media screen and (min-width: $header-menu) {
-    float: right;
-    text-align: right;
-    padding: 22px 15px 20px 0;
+  @media screen and (min-width: $tablet) {
+    display: block;
   }
+}
 
-  @media screen and (min-width: $desktop) {
-    padding: 22px 30px;
-  }
-
-  .advertiser-nav__call {
-    display: none;
-    font-weight: 600;
-
-    @media screen and (min-width: $desktop) {
-      display: inline-block;
-    }
-  }
-
-  .btn {
-    margin-left: 15px;
-  }
-
-  .more {
-    display: none;
-
-    @media screen and (min-width: $desktop) {
-      display: block;
-    }
-  }
-
-  .advertiser {
-    @media screen and (min-width: $desktop) {
-      display: none;
-    }
-  }
+.header-github-image {
+  display: block;
+  height: rem(149);
+  width: rem(149);
 }
