Normalize all links for episodes

--- a/public/assets/scss/modules/_quick-access.scss
+++ b/public/assets/scss/modules/_quick-access.scss
@@ -17,7 +17,8 @@
 }
 
 .filter-select {
-  border: 0 none;
+  background-color: $ligten;
+  border: $neutral 1px solid;
   height: 40px;
   outline: $neutral;
   width: 100%;
