Layout for partners in home

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
 
     {% include modules/cover-photo.html %}
 
+    {% include modules/partners.html %}
+
     <div class="container">
       {{ content }}
     </div>
