--- a/css/main.scss
+++ b/css/main.scss
@@ -32,6 +32,7 @@
 @import "modules/post-links";
 @import "modules/post-links-sponsors";
 @import "modules/post-support";
+@import "modules/partners";
 
 // layout
 @import "layout/structure";
