update link partners

--- a/_includes/modules/partners.html
+++ b/_includes/modules/partners.html
@@ -2,22 +2,22 @@
   <h2 class="partners-title">Esse projeto é patrocinado pelas empresas:</h2>
   <ul class="partners-list">
     <li>
-      <a href="#" class="partners-link">
+      <a href="http://bit.ly/dne-contratado" class="partners-link" target="_blank">
         <img class="image-block" src="{{ "public/assets/img/partners/contratadome.png" | prepend: site.baseurl }}" alt="Logo da empresa Contratado.me" />
       </a>
     </li>
     <li>
-      <a href="#" class="partners-link">
+      <a href="http://bit.ly/dne-vanhack" class="partners-link" target="_blank">
         <img class="image-block" src="{{ "public/assets/img/partners/vanhack.png" | prepend: site.baseurl }}" alt="Logo da empresa Vanhack" />
       </a>
     </li>
     <li>
-      <a href="#" class="partners-link">
+      <a href="http://bit.ly/dne-alura" class="partners-link" target="_blank">
         <img class="image-block" src="{{ "public/assets/img/partners/alura.png" | prepend: site.baseurl }}" alt="Logo da empresa Alura" />
       </a>
     </li>
     <li>
-      <a href="#" class="partners-link">
+      <a href="http://bit.ly/dne-stickersdevs" class="partners-link" target="_blank">
         <img class="image-block" src="{{ "public/assets/img/partners/stickersdevs.png" | prepend: site.baseurl }}" alt="Logo da empresa StickersDevs" />
       </a>
     </li>
