--- a/public/assets/scss/modules/structure/_header.scss
+++ b/public/assets/scss/modules/structure/_header.scss
@@ -68,6 +68,7 @@ header {
   position: fixed;
   right: 0;
   top: 0;
+  z-index: 5;
 
   @media screen and (min-width: $tablet) {
     display: block;
