--- a/public/assets/scss/core/config/_colors.scss
+++ b/public/assets/scss/core/config/_colors.scss
@@ -2,6 +2,7 @@
 $ligten: #fff !default;
 $darken: #000 !default;
 $neutral: gray !default;
+$neutral-light: #e2e2e2 !default;
 
 // core colors
 $primary-color: #e67e22 !default;
