--- a/public/assets/scss/core/config/_units.scss
+++ b/public/assets/scss/core/config/_units.scss
@@ -1,8 +1,13 @@
+// font
 $base-font-size: 17px;
 
+// media query
 $iphone-retina: 320px;
 $mobile: 480px;
 $tablet: 768px;
 $header-menu: 820px;
 $notebook: 992px;
 $desktop: 1200px;
+
+// borders
+$base-radius: 3px;
