--- a/_includes/modules/cover-photo.html
+++ b/_includes/modules/cover-photo.html
@@ -1,7 +1,7 @@
 <section class="coverphoto">
   <div class="coverphoto-holder">
     <h1 class="coverphoto-title">
-      Podcast de Desenvolvimento Web com Episódios todas as sextas-feiras
+      Podcast sobre desenvolvimento web com episódios novos todas as sextas-feiras
     </h1>
     <nav class="social-nav">
       <ul>
