Infinite scrolling .cover-photo

--- a/public/assets/scss/core/config/_colors.scss
+++ b/public/assets/scss/core/config/_colors.scss
@@ -17,6 +17,8 @@ $base-text-color: #21272d !default;
 $heart-color: #e74c3c !default;
 $profile-role-color: #848484 !default;
 $home-cast-description: $profile-role-color !default;
+$bg-tag-color: #332b2b !default;
+$tag-color: #ff1493 !default;
 
 // post
 $post-title-color: #263c4c !default;
