--- a/_includes/modules/cover-photo.html
+++ b/_includes/modules/cover-photo.html
@@ -4,7 +4,7 @@
       Podcast sobre desenvolvimento web
     </h1>
     <h2 class="coverphoto-subtitle">
-      novos episódios todas às <code class="friday"><span class="lt">&lt;</span><span class="tag">sextas-feiras</span><span class="gt">&gt;</span></code>
+      novos episódios todas as <code class="friday"><span class="lt">&lt;</span><span class="tag">sextas-feiras</span><span class="gt">&gt;</span></code>
     </h2>
     <nav class="social-nav">
       <ul>
