Add post participants section

--- a/css/main.scss
+++ b/css/main.scss
@@ -28,6 +28,7 @@
 @import "modules/blocks/post-cast";
 @import "modules/blocks/supporters";
 @import "modules/blocks/item-store";
+@import "modules/post-participants";
 @import "modules/post-links";
 @import "modules/post-links-sponsors";
 @import "modules/post-support";
