Add some styles to post participants section

--- a/_includes/modules/post-participants.html
+++ b/_includes/modules/post-participants.html
@@ -1,12 +1,16 @@
 {% if page.participants %}
   <section class="post-participants">
-    <h2 class="post-participants-title">Convidado</h2>
+    {% if page.participants.size > 1 %}
+      <h2 class="post-participants-title">Convidados</h2>
+    {% else %}
+      <h2 class="post-participants-title">Convidado</h2>
+    {% endif %}
     <ul>
       {% for participant in page.participants %}
         <li>
           <img src="https://twitter.com/{{ participant.twitter }}/profile_image?size=original">
           <h3>{{ participant.name }}</h3>
-          <a href="http://twitter.com/{{ participant.twitter }}" target="_blank">@{{ participant.twitter }}</a>
+          <a href="http://twitter.com/{{ participant.twitter }}" class="post-links-link twitter" target="_blank">@{{ participant.twitter }}</a>
         </li>
       {% endfor %}
     </ul>
