--- a/css/main.scss
+++ b/css/main.scss
@@ -31,6 +31,7 @@
 @import "modules/post-participants";
 @import "modules/post-links";
 @import "modules/post-links-sponsors";
+@import "modules/post-links-participants";
 @import "modules/post-support";
 @import "modules/partners";
 @import "modules/episodes";
