--- a/public/assets/scss/core/config/_colors.scss
+++ b/public/assets/scss/core/config/_colors.scss
@@ -28,3 +28,6 @@ $contratadome: #323a45 !default;
 $vanhack: #0077e0 !default;
 $alura: #fdc14a !default;
 $stickersdevs: #579fd6 !default;
+
+// participants
+$twitter: #00aced !default;
