--- a/public/assets/scss/modules/_post-links-sponsors.scss
+++ b/public/assets/scss/modules/_post-links-sponsors.scss
@@ -1,5 +1,5 @@
 /////////////////////////////////
-// name:    Post Links Sponsors
+// name:    Post Links Participants
 // extend:  Post Links
 ////////////////////////////////
 
