--- a/css/main.scss
+++ b/css/main.scss
@@ -28,8 +28,10 @@
 @import "modules/blocks/post-cast";
 @import "modules/blocks/supporters";
 @import "modules/blocks/item-store";
+@import "modules/post-participants";
 @import "modules/post-links";
 @import "modules/post-links-sponsors";
+@import "modules/post-links-participants";
 @import "modules/post-support";
 @import "modules/partners";
 @import "modules/episodes";
