Cover photo improve image Cover photo animation scrolling by @kvnol

--- a/css/main.scss
+++ b/css/main.scss
@@ -12,6 +12,7 @@
 @import "core/config/units";
 @import "core/config/typograph";
 @import "core/extend/inline-block";
+@import "core/animation";
 
 // font
 @import "modules/font/fontawesome/font-awesome";
