Add Vanhack Fest

--- a/_includes/modules/sponsors.html
+++ b/_includes/modules/sponsors.html
@@ -5,8 +5,11 @@
       Seu emprego novo acha você, grátis e 100% online 
       <a href="http://bit.ly/dne-contratado" class="post-links-link contratado" target="_blank">Contratado.me</a>
     </li>
-    <li>
+    <!-- <li>
       Quer trabalhar fora do Brasil? Acesse a <a href="http://bit.ly/dne-vanhack" class="post-links-link vanhack" target="_blank">Vanhack</a> e realize seu sonho!
+    </li> -->
+    <li>
+      Participe da <a href="http://bit.ly/dne-vanhack" class="post-links-link vanhack" target="_blank">VanHack Fest</a> um meetup para conectar membros da VanHack do mundo todo! Venha conhecer pessoas e conseguir o seu tão sonhado emprego no Canadá!
     </li>
     <li>
       Cursos online de programação, design, mobile e muito mais! <a href="http://bit.ly/dne-alura" class="post-links-link alura" target="_blank">Alura.com.br</a>
