Update some layout padding, margins and scss-lint

--- a/_includes/modules/supporter.html
+++ b/_includes/modules/supporter.html
@@ -1,4 +1,7 @@
 <section class="post-support">
+  <p>
+    Esse projeto é apoiado por mais de <span class="highlight">85 pessoas</span>
+  </p>
   <a href="http://bit.ly/dne-apoiase" class="btn" target="_blank">
     Quero apoiar esse projeto
   </a>
