--- a/public/assets/scss/modules/_episodes.scss
+++ b/public/assets/scss/modules/_episodes.scss
@@ -1,6 +1,9 @@
-//////////////////////
-// name: Episodes
-//////////////////////
+// *************************************
+//
+//   Episodes
+//   -> 
+//
+// *************************************
 
 .episodes {
   margin-left: rem(-30);
@@ -16,7 +19,7 @@
 .episodes-holder {
   float: left;
   width: 100%;
-  
+
   @media screen and (min-width: $mobile) { width: 50%; }
   @media screen and (min-width: $tablet) { width: 33.33%; }
   @media screen and (min-width: $notebook) { width: 25%; }
