--- a/public/assets/scss/modules/_partners.scss
+++ b/public/assets/scss/modules/_partners.scss
@@ -1,6 +1,9 @@
-//////////////////////
-// name: Partners
-//////////////////////
+// *************************************
+//
+//   Partners
+//   -> 
+//
+// *************************************
 
 .partners {
   margin-top: rem(60);
@@ -9,23 +12,23 @@
 }
 
 .partners-title {
-  margin-top: 0;
-  margin-bottom: rem(30);
   font-size: rem(18);
+  margin-bottom: rem(30);
+  margin-top: 0;
 }
 
 .partners-list {
+  list-style: none;
   margin: 0;
   padding: 0;
-  list-style: none;
-}
 
-.partners-list li {
-  @extend %inline-middle-block;
-  margin-left: rem(15);
+  li {
+    @extend %inline-middle-block;
+    margin-left: rem(15);
 
-  &:first-child {
-    margin-left: 0;
+    &:first-child {
+      margin-left: 0;
+    }
   }
 }
 
@@ -34,7 +37,7 @@
 
   &:hover,
   &:active,
-  &:focus, {
+  &:focus {
     img {
       @include transition(all .3s ease-in-out);
       opacity: .5;
