--- a/_includes/modules/next-events.html
+++ b/_includes/modules/next-events.html
@@ -2,14 +2,13 @@
   <h2 class="post-links-title">Vamos fazer Network?</h2>
   <ul>
     <li>
-      Garanta R$ 30,00 de desconto no
-      <a href="http://bit.ly/dne-frontinbh-desconto" class="post-links-link" target="_blank">Ingresso do Frontinbh</a>
-    </li>
-    <li>
       Compre seu ingresso para o <a href="http://bit.ly/dne-braziljsconf" class="post-links-link" target="_blank">BrazilJSConf</a> maior conferência de Javascript do Mundo!
     </li>
     <li>
       O maior evento de PHP do interior Paulista o <a href="http://bit.ly/dne-phpspima" class="post-links-link" target="_blank">PHPSP+IMA</a> garanta seu ingresso.
+    </li>
+    <li>
+      <a href="http://bit.ly/dne-phpeste2016" class="post-links-link" target="_blank">PHPeste</a> é a melhor conferência de PHP organizada pelas comunidades "cabra da peste" no Nordeste Brasileiro. Venha prestigiar esse grande evento que esse ano acontecerá em Salvador (BA).
     </li>
   </ul>
 </section>
