--- a/_includes/modules/next-events.html
+++ b/_includes/modules/next-events.html
@@ -5,10 +5,13 @@
       Compre seu ingresso para o <a href="http://bit.ly/dne-braziljsconf" class="post-links-link" target="_blank">BrazilJSConf</a> maior conferência de Javascript do Mundo!
     </li>
     <li>
-      O maior evento de PHP do interior Paulista o <a href="http://bit.ly/dne-phpspima" class="post-links-link" target="_blank">PHPSP+IMA</a> garanta seu ingresso.
+      <a href="http://bit.ly/dne-phpeste2016" class="post-links-link" target="_blank">PHPeste</a> é a melhor conferência de PHP organizada pelas comunidades "cabra da peste" no Nordeste Brasileiro. Venha prestigiar esse grande evento que esse ano acontecerá em Salvador (BA).
     </li>
     <li>
-      <a href="http://bit.ly/dne-phpeste2016" class="post-links-link" target="_blank">PHPeste</a> é a melhor conferência de PHP organizada pelas comunidades "cabra da peste" no Nordeste Brasileiro. Venha prestigiar esse grande evento que esse ano acontecerá em Salvador (BA).
+      Mais de 1.000 participantes, 30+ expositores e +60 palestrantes, essa é a  <a href="http://bit.ly/dne-android-conference" class="post-links-link" target="_blank">AndroidConference 2016</a>, evento organizado pela iMasters!
+    </li>
+    <li>
+      Gosta de PHP? Venha para a maior conferência de Laravel do Brasil o <a href="http://bit.ly/dne-laraconfbrasil" class="post-links-link" target="_blank">LARACONFBRASIL</a> e garanta seu ingresso.
     </li>
   </ul>
 </section>
