--- a/_includes/modules/next-events.html
+++ b/_includes/modules/next-events.html
@@ -7,5 +7,8 @@
     <li>
       Gosta de PHP? Venha para a maior conferência de Laravel do Brasil o <a href="http://bit.ly/dne-laraconfbrasil" class="post-links-link" target="_blank">LARACONFBRASIL</a> e garanta seu ingresso.
     </li>
+    <li>
+      Venha para o <a href="http://bit.ly/dne-wordcamprj" class="post-links-link" target="_blank">WordCamp</a>, é um evento com alcance internacional e oficial do WordPres; Feito por voluntários e abrange Front-End, Back-End, Conteúdo e Marketing. 
+    </li>
   </ul>
 </section>
