Change Wordcamp RJ description

--- a/_includes/modules/next-events.html
+++ b/_includes/modules/next-events.html
@@ -8,7 +8,7 @@
       Gosta de PHP? Venha para a maior conferência de Laravel do Brasil o <a href="http://bit.ly/dne-laraconfbrasil" class="post-links-link" target="_blank">LARACONFBRASIL</a> e garanta seu ingresso.
     </li>
     <li>
-      Venha para o <a href="http://bit.ly/dne-wordcamprj" class="post-links-link" target="_blank">WordCamp</a>, é um evento com alcance internacional e oficial do WordPres; Feito por voluntários e abrange Front-End, Back-End, Conteúdo e Marketing. 
+      <a href="http://bit.ly/dne-wordcamprj" class="post-links-link" target="_blank">WordCamp RJ 2016</a> a 3ª edição do maior evento sobre WordPress na Cidade maravilhosa! Dia 24 de setembro de 2016 na Universidade Veiga de Almeida (Tijuca).
     </li>
   </ul>
 </section>
