new page community

--- a/_includes/structure/header.html
+++ b/_includes/structure/header.html
@@ -7,9 +7,9 @@
 			<li>
 				<a href="{{ "sobre" | prepend: site.baseurl }}" class="header-nav-link">Sobre</a>
 			</li>
-			<!-- <li>
-				<a href="#" class="header-nav-link" target="_blank">Parceiros</a>
-			</li> -->
+			<li>
+				<a href="{{ "comunidades" | prepend: site.baseurl }}" class="header-nav-link">Comunidades</a>
+			</li>
 			<li>
 				<a href="https://apoia.se/devnaestrada/supports" class="header-nav-link" target="_blank">Apoiadores</a>
 			</li>
