Include new assets for community page

--- a/css/main.scss
+++ b/css/main.scss
@@ -34,6 +34,7 @@
 @import "modules/partners";
 @import "modules/episodes";
 @import "modules/episode";
+@import "modules/community";
 
 // layout
 @import "layout/structure";
