fix imagem dos cards (#71)
* fix imagem dos cards

* change css property using alphabetical order

--- a/public/assets/scss/modules/_episode.scss
+++ b/public/assets/scss/modules/_episode.scss
@@ -32,6 +32,7 @@
 
 .episode-cover-photo {
   border-radius: $base-radius;
+  box-sizing: border-box;  
   display: block;
   padding: rem(3);
   width: 100%;
