Add sponsor Scaffold for episode 72 Scaffold for episode feat CodeSchool

--- a/_includes/modules/sponsors.html
+++ b/_includes/modules/sponsors.html
@@ -6,7 +6,7 @@
       <a href="http://bit.ly/dne-contratado" class="post-links-link contratado" target="_blank">Contratado.me</a>
     </li>
     <li>
-      Quer trabalhar fora do Brasil? Acesse a <a href="http://bit.ly/dne-vanhack" class="post-links-link vanhack" target="_blank">Vanhack</a> e realize seu sonho!
+      Quer trabalhar no Canadá? Participe no <a href="http://bit.ly/dne-vanhack" class="post-links-link vanhack" target="_blank">VanHackathon</a>, um hackathon virtual com as melhores empresas canadenses que estão buscando talentos brasileiros. Será nos dias 21, 22 e 23 de outubro.
     </li>
     <li>
       Cursos online de programação, design, mobile e muito mais! <a href="http://bit.ly/dne-alura" class="post-links-link alura" target="_blank">Alura.com.br</a>
