--- a/public/assets/scss/modules/personal/_profile.scss
+++ b/public/assets/scss/modules/personal/_profile.scss
@@ -9,7 +9,7 @@
   width: 250px;
 
   &.profile__image--femontanha {
-    background-image: url('http://pbs.twimg.com/profile_images/657406409341030400/4YB5kvoX.jpg');
+    background-image: url('https://pbs.twimg.com/profile_images/778806751852277768/wBMhxqpy.jpg');
   }
 
   &.profile__image--raymon {
