Remove VanHack partner

--- a/_includes/modules/partners.html
+++ b/_includes/modules/partners.html
@@ -1,14 +1,9 @@
 <section class="partners">
-  <h2 class="partners-title">Esse projeto é patrocinado pelas empresas:</h2>
+  <h2 class="partners-title">Esse projeto é apoiado pelas empresas:</h2>
   <ul class="partners-list">
     <li>
       <a href="http://bit.ly/dne-contratado" class="partners-link" target="_blank">
         <img class="image-block" src="{{ "public/assets/img/partners/contratadome.png" | prepend: site.baseurl }}" alt="Logo da empresa Contratado.me" />
-      </a>
-    </li>
-    <li>
-      <a href="http://bit.ly/dne-vanhack" class="partners-link" target="_blank">
-        <img class="image-block" src="{{ "public/assets/img/partners/vanhack.png" | prepend: site.baseurl }}" alt="Logo da empresa Vanhack" />
       </a>
     </li>
     <li>
