--- a/_includes/modules/sponsors.html
+++ b/_includes/modules/sponsors.html
@@ -1,15 +1,11 @@
 <section class="post-links">
-  <h2 class="post-links-title">Nossos Patrocinadores</h2>
+  <h2 class="post-links-title">Nossos Apoios:</h2>
   <ul>
     <li>
-      Seu emprego novo acha você, grátis e 100% online 
-      <a href="http://bit.ly/dne-contratado" class="post-links-link contratado" target="_blank">Contratado.me</a>
+      <a href="http://bit.ly/dne-contratado" class="post-links-link contratado" target="_blank">Contratado.me</a> Você encontra seu emprego novo, grátis e 100% online.
     </li>
     <li>
-      Quer trabalhar no Canadá? Participe no <a href="http://bit.ly/dne-vanhack" class="post-links-link vanhack" target="_blank">VanHackathon</a>, um hackathon virtual com as melhores empresas canadenses que estão buscando talentos brasileiros. Será nos dias 21, 22 e 23 de outubro.
-    </li>
-    <li>
-      Cursos online de programação, design, mobile e muito mais! <a href="http://bit.ly/dne-alura" class="post-links-link alura" target="_blank">Alura.com.br</a>
+      <a href="http://bit.ly/dne-alura" class="post-links-link alura" target="_blank">Alura.com.br</a> Cursos online de programação, design, mobile e muito mais!
     </li>
   </ul>
 </section>
