--- a/_includes/modules/partners.html
+++ b/_includes/modules/partners.html
@@ -1,14 +1,16 @@
 <section class="partners">
-  <h2 class="partners-title">Esse projeto é apoiado pelas empresas:</h2>
   <ul class="partners-list">
+    <li class="partners-title">
+      Projeto apoiado pelas empresas
+    </li>
     <li>
       <a href="http://bit.ly/dne-contratado" class="partners-link" target="_blank">
-        <img class="image-block" src="{{ "public/assets/img/partners/contratadome.png" | prepend: site.baseurl }}" alt="Logo da empresa Contratado.me" />
+        <img class="image-adap" src="{{ "public/assets/img/partners/contratadome.png" | prepend: site.baseurl }}" alt="Logo da empresa Contratado.me" />
       </a>
     </li>
     <li>
       <a href="http://bit.ly/dne-alura" class="partners-link" target="_blank">
-        <img class="image-block" src="{{ "public/assets/img/partners/alura.png" | prepend: site.baseurl }}" alt="Logo da empresa Alura" />
+        <img class="image-adap" src="{{ "public/assets/img/partners/alura.png" | prepend: site.baseurl }}" alt="Logo da empresa Alura" />
       </a>
     </li>
   </ul>
