New text for Guanabara episode change size of twitter picture apply module final post

--- a/_includes/modules/post-participants.html
+++ b/_includes/modules/post-participants.html
@@ -8,7 +8,7 @@
     <ul>
       {% for participant in page.participants %}
         <li>
-          <img src="https://twitter.com/{{ participant.twitter }}/profile_image?size=original">
+          <img src="https://twitter.com/{{ participant.twitter }}/profile_image?size=bigger">
           <h3>{{ participant.name }}</h3>
           <a href="http://twitter.com/{{ participant.twitter }}" class="post-links-link twitter" target="_blank">@{{ participant.twitter }}</a>
         </li>
