Add youtube frame when we have parameter

--- a/_includes/modules/post-extras.html
+++ b/_includes/modules/post-extras.html
@@ -1,3 +1,7 @@
+{% if include.data.youtubeCode %}
+  {% include modules/youtube.html code=include.data.youtubeCode %}
+{% endif%}
+
 {% include modules/supporter.html %}
 
 {% include modules/post-participants.html %}
