--- a/css/main.scss
+++ b/css/main.scss
@@ -30,6 +30,7 @@
 @import "modules/post-links";
 @import "modules/post-links-sponsors";
 @import "modules/post-links-participants";
+@import "modules/post-youtube";
 @import "modules/post-support";
 @import "modules/partners";
 @import "modules/episodes";
