--- a/_includes/modules/final-post.html
+++ b/_includes/modules/final-post.html
@@ -2,10 +2,41 @@
 
 DEVNAESTRADA é um podcast voltado para desenvolvedores web, front-end, back-end e entrevistas com pessoas na área
 
-- **Seja um apoiador:** [https://apoia.se/devnaestrada](https://apoia.se/devnaestrada)
-- **Site:** [http://www.devnaestrada.com.br](http://www.devnaestrada.com.br)
-- **Github:** [https://github.com/devnaestrada/devnaestrada.com.br](https://github.com/devnaestrada/devnaestrada.com.br)
-- **Facebook:** [http://www.facebook.com/devnaestrada](http://www.facebook.com/devnaestrada)
-- **Twitter:** [http://twitter.com/devnaestrada](http://twitter.com/devnaestrada)
-- **Soundcloud:** [http://soundcloud.com/devnaestrada](http://soundcloud.com/devnaestrada)
-- **Google+:** [https://plus.google.com/117563839946689386602](https://plus.google.com/117563839946689386602)
+<ul>
+  <li>
+    <strong>Seja um apoiador:</strong>
+    <a href="https://apoia.se/devnaestrada">
+      https://apoia.se/devnaestrada
+    </a>
+  </li>
+  <li>
+    <strong>Site:</strong>
+    <a href="http://www.devnaestrada.com.br">
+      http://www.devnaestrada.com.br
+    </a>
+  </li>
+  <li>
+    <strong>Github:</strong>
+    <a href="https://github.com/devnaestrada/devnaestrada.com.br">
+      https://github.com/devnaestrada/devnaestrada.com.br
+    </a>
+  </li>
+  <li>
+    <strong>Facebook:</strong>
+    <a href="https://github.com/devnaestrada/devnaestrada.com.br">
+      https://github.com/devnaestrada/devnaestrada.com.br
+    </a>
+  </li>
+  <li>
+    <strong>Twitter:</strong>
+    <a href="http://twitter.com/devnaestrada">
+      http://twitter.com/devnaestrada
+    </a>
+  </li>
+  <li>
+    <strong>Soundcloud:</strong>
+    <a href="http://soundcloud.com/devnaestrada">
+      http://soundcloud.com/devnaestrada
+    </a>
+  </li>
+</ul>
