--- a/_includes/structure/header.html
+++ b/_includes/structure/header.html
@@ -1,6 +1,6 @@
 <header>
 	<a href="/" class="header-brand">
-		<img src="{{ "public/assets/img/devnaestrada.svg" | prepend: site.baseurl }}" alt="DevNaEstrada" />
+		<img src="{{ "public/assets/img/devnaestrada.svg" | prepend: site.baseurl }}" alt="DEVNAESTRADA logo" />
 	</a>
 	<nav class="header-nav">
 		<ul>
