--- a/public/assets/scss/modules/structure/_header.scss
+++ b/public/assets/scss/modules/structure/_header.scss
@@ -14,6 +14,10 @@ header {
   display: block;
   text-align: center;
 
+  img {
+    width: rem(100)
+  }
+
   @media screen and (min-width: $tablet) {
     display: inline-block;
     text-align: left;
