Fix facebook page url in final-post.html

--- a/_includes/modules/final-post.html
+++ b/_includes/modules/final-post.html
@@ -23,8 +23,8 @@ DEVNAESTRADA é um podcast voltado para desenvolvedores web, front-end, back-end
   </li>
   <li>
     <strong>Facebook:</strong>
-    <a href="https://github.com/devnaestrada/devnaestrada.com.br">
-      https://github.com/devnaestrada/devnaestrada.com.br
+    <a href="https://www.facebook.com/devnaestrada">
+      https://www.facebook.com/devnaestrada
     </a>
   </li>
   <li>
